# fluid_simulation

./: .gitignore  CB_hello.cpp  CMakeLists.txt  DataAnalyse.sh  Documentation.sh  README.md  Simulation_test.sh  address  address_and_pointer  address_and_pointer.cpp  calc.py  makefile  nohup.out  practice  practice.cpp  run_Simulation.sh  sf_simu  string  string.cpp  structur  structur.cpp
1D_harmonic_oscillator/: 1D_harmonic_oscillator  1D_harmonic_oscillator.cpp  Analysis_of_1D_harmonic_oscillator.aux  Analysis_of_1D_harmonic_oscillator.fdb_latexmk  Analysis_of_1D_harmonic_oscillator.fls  Analysis_of_1D_harmonic_oscillator.ipynb  Analysis_of_1D_harmonic_oscillator.tex  VV_algo_0.100000.csv
cmd/: Documentation.sh  run_DataAnalyse.sh  run_Simulation.sh  test.py  test_DataAnalyse.sh  test_Simulation.sh
cmd/script/: MSD.py  RDF.py  test.py  v_corr.py  v_dist.py  write_xyz.py
config/: config.txt
doc/: documentation.dox
fluid_analyse/: __init__.py
fluid_analyse/analyse/: MSD.py  __init__.py  cell_list.py  color_map.py  r_distr_func.py  velocity_correlation.py  velocity_distribution.py  write_xyz.py
include/: algorithm.hpp  export.hpp  fluid_simulation.hpp  implement.hpp  init.hpp  initialization.hpp  main.hpp
include/output/: output.hpp
src/: algorithm.cpp  export.cpp  fluid_simulation.cpp  implement.cpp  init.cpp  initialization.cpp  main.cpp  main_old.cpp  prng.h
temp/: config.txt  read_init_cfg_pos_vel_Nm_1.xyz  read_init_cfg_pos_vel_Nm_10.xyz  read_init_cfg_pos_vel_Nm_100.xyz  read_init_cfg_pos_vel_Nm_100000.xyz  read_init_cfg_pos_vel_Nm_2.xyz  sf_simu
(+59 files in other folders)
